--- a/mysite/main/templates/main/home.html
+++ b/mysite/main/templates/main/home.html
@@ -1,16 +1,8 @@
 {% extends 'main/navbar.html' %}
 
-<!DOCTYPE html>
-<html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    {% load static %}
-    <link type="text/css" rel="stylesheet" href="{% static 'tinymce/css/prism.css' %}">
-
 </head>
 
 <body>
@@ -22,9 +14,6 @@
         {% endfor%}
 
     {% endblock %}
-
-    <script src="{% static 'tinymce/css/prism.js' %}"></script>
+{% load static %}    <script src="{% static 'tinymce/css/prism.js' %}"></script>
 
 </body>
-
-</html>
