--- a/mysite/main/templates/main/navbar.html
+++ b/mysite/main/templates/main/navbar.html
@@ -2,10 +2,14 @@
 <html lang="en">
 
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    {% load static %}
+    <link type="text/css" rel="stylesheet" href="{% static 'tinymce/css/prism.css' %}">
+
 </head>
 
 <body>
@@ -16,11 +20,49 @@
                 <li><a href="/profile">userimg</a></li>
                 <li><a href="/">home</a></li>
                 <li><a href="/register">register</a></li>
-                <li><a href="/login">login</a></li>
+                <li><a href="/signin">signin</a></li>
             </ul>
         </div>
     </nav>
-    {% block content %} {% endblock %}
+
+
+    {% if messages %} {% for message in messages %}
+
+    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+            <img src="..." class="rounded me-2" alt="...">
+            <strong class="me-auto">Bootstrap</strong>
+            <small>{% now "jS F Y H:i" %}</small>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body">
+            {{message}}
+        </div>
+    </div>
+
+
+
+
+
+    {% endfor %} {% endif %}
+
+
+
+    <div class="container">
+        {% block content %} {% endblock %}
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
+
+
+
+<!-- Compiled and minified CSS -->
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
+
+<!-- Compiled and minified JavaScript -->
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
