--- a/mysite/main/templates/main/register.html
+++ b/mysite/main/templates/main/register.html
@@ -1,1 +1,15 @@
-{% extends 'main/navbar.html' %}
+{% extends 'main/navbar.html' %} {% block content %}
+
+<form method="POST">
+    {% csrf_token %}
+    <table class="table table-borderless">
+
+        <tbody>
+            {{form.as_table}}
+        </tbody>
+    </table>
+
+    <button type="submit">register</button>
+</form>
+
+If you already have an account <a href="/login" target="blank"><strong>login</strong></a> instead. {% endblock %}
