--- a/mysite/main/templates/main/base.html
+++ b/mysite/main/templates/main/base.html
@@ -13,22 +13,13 @@
 </head>
 
 <body>
-    <nav>
-        <div class="">
-            <a href="/" class="">homelogo</a>
-            <ul class="">
-                <li><a href="/profile">userimg</a></li>
-                <li><a href="/">home</a></li>
-                <li><a href="/register">register</a></li>
-                <li><a href="/signin">signin</a></li>
-            </ul>
-        </div>
-    </nav>
+
+{% include "includes/navbar.html" %}
 
 
     {% if messages %} {% for message in messages %}
 
-    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" onload="">
         <div class="toast-header">
             <img src="..." class="rounded me-2" alt="...">
             <strong class="me-auto">Bootstrap</strong>
@@ -39,10 +30,6 @@
             {{message}}
         </div>
     </div>
-
-
-
-
 
     {% endfor %} {% endif %}
 
