--- a/mysite/main/templates/main/register.html
+++ b/mysite/main/templates/main/register.html
@@ -1,4 +1,4 @@
-{% extends 'main/navbar.html' %} {% block content %}
+{% extends 'main/base.html' %} {% block content %}
 
 <form method="POST">
     {% csrf_token %}
